--- a/static/style.css
+++ b/static/style.css
@@ -32,7 +32,8 @@ body {
     text-align: center;
     color: #1C2C3B;
 }
-h3{
+
+h3 {
     color: #1C2C3B;
 }
 
@@ -76,7 +77,7 @@ button {
     display: block;
     width: 50%;
     padding: 10px;
-    background-color:#C15BB8 ;
+    background-color: #C15BB8;
     color: white;
     border: none;
     border-radius: 5px;
@@ -89,6 +90,7 @@ button:hover {
     background-color: #9928A8;
     transition: background-color 0.5s ease;
 }
+
 .middleInfo {
     display: flex;
     justify-content: space-between;
@@ -109,23 +111,49 @@ button:hover {
 .middleInfo .info-box h3 {
     margin-top: 0;
 }
-.middleInfo .info-box:hover{
+
+.middleInfo .info-box:hover {
     background-color: #cccccc;
     transition: background-color 0.5s ease;
-    border: 1px solid #1C2C3B ;
+    border: 1px solid #1C2C3B;
 }
-.middleInfo .info-box p{
+
+.middleInfo .info-box p {
     font-size: 17px;
 }
-.info-box h3{
+
+.info-box h3 {
     border: 2px solid #1C2C3B;
     margin: 1px;
 }
-.prompt, .results {
+
+.outputs {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
     margin-top: 20px;
-    padding: 10px;
+}
+
+.text-results {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.image-generation {
+    grid-column: 2;
     background-color: #f1f1f1;
+    padding: 10px;
     border-radius: 5px;
+    font-size: 13px;
+    width: 92%;
+}
+
+.prompt, .results {
+    background-color: #f1f1f1;
+    padding: 10px;
+    border-radius: 5px;
+    font-size: 13px;
 }
 
 .results .result {
@@ -140,14 +168,17 @@ button:hover {
     list-style-type: disc;
     padding-left: 20px;
 }
-.separator{
+
+.separator {
     border: 0.5px solid #1C2C3B;
     width: 50px;
 }
+
 .foot {
     margin-top: 50px;
     padding: 10px;
     background-color: #e9e9e9;
     border-radius: 5px;
     width: 14%;
+    text-align: center;
 }
